--- a/.github/workflows/error-contract.yml
+++ b/.github/workflows/error-contract.yml
@@ -32,8 +32,9 @@ jobs:
             -H "Content-Type: application/json" \
             -d '{}' 2>&1)
           
-          status=$(echo "$response" | grep -oP 'HTTP/\d\.\d \K\d+' | head -1 || echo "")
-          body=$(echo "$response" | grep -oP '\{.*\}' || echo "")
+          status=$(echo "$response" | grep -oE 'HTTP/[0-9]+\.[0-9]+ [0-9]+' | head -1 | grep -oE '[0-9]{3}' | head -1 || echo "")
+          # Extract JSON body (everything from first { to last })
+          body=$(echo "$response" | grep -oE '\{.*\}' || echo "")
           
           echo "Status: $status"
           echo ""
@@ -85,8 +86,9 @@ jobs:
           
           response=$(curl -sS -i http://localhost:8080/api/non-existent-endpoint 2>&1)
           
-          status=$(echo "$response" | grep -oP 'HTTP/\d\.\d \K\d+' | head -1 || echo "")
-          body=$(echo "$response" | grep -oP '\{.*\}' || echo "")
+          status=$(echo "$response" | grep -oE 'HTTP/[0-9]+\.[0-9]+ [0-9]+' | head -1 | grep -oE '[0-9]{3}' | head -1 || echo "")
+          # Extract JSON body (everything from first { to last })
+          body=$(echo "$response" | grep -oE '\{.*\}' || echo "")
           
           echo "Status: $status"
           echo ""
