Docs/Runbooks/Rules/Changelog/Proofs consolidation
- Add comprehensive proof documentation (storage permissions, alert pipeline, repo recovery, etc.)
- Add runbooks (storage permissions, alerts pipeline, observability status, repo integrity)
- Update RULES.md with storage posture and alert pipeline proof gates
- Update CHANGELOG.md with all pack entries
- Add .gitattributes for line ending consistency
- Update .gitignore to exclude archive/diag/backup/temp files
- Note: work/hos is a nested repo (not tracked in root)

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,21 @@ work/hos/secrets/*.txt
 oidc_token*.json
 cookies.txt
 headers.txt
+
+# Archive / diagnostics / backups (never track)
+_archive/
+_diag_*.txt
+_diagnosis_*.txt
+_evidence_*.txt
+_evidence_*.json
+_verify_output*.txt
+*.bak-*
+*.backup-*
+.env.backup-*
+
+# Ops temporary files
+ops/*.backup
+ops/diffs/
+
+# Temp files
+_temp_*.txt
