Storage writability fix + alert pipeline proof gates
- Enhance docker-entrypoint.sh with robust permission enforcement and writability probe (fail-fast)
- Add supervisord.conf for pazar-app (required by Dockerfile)
- Add named volumes (pazar_storage, pazar_cache) to docker-compose.yml for Windows bind mount fix
- Add /last endpoint to alert-webhook service for alert payload retrieval
- Fix storage permission issues to prevent UI 500 errors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,6 +110,9 @@ services:
       - ./work/pazar/resources/views:/var/www/html/resources/views
       - ./work/pazar/app:/var/www/html/app
       - ./work/pazar/routes:/var/www/html/routes
+      # Named volumes for runtime-writable directories (Windows bind mount permission fix)
+      - pazar_storage:/var/www/html/storage
+      - pazar_cache:/var/www/html/bootstrap/cache
     restart: unless-stopped
 
 secrets:
@@ -132,5 +135,9 @@ volumes:
     name: hos_db_data
   pazar_db_data:
     name: pazar_db_data
+  pazar_storage:
+    name: pazar_storage
+  pazar_cache:
+    name: pazar_cache
 
 
