Observability + metrics endpoint fix + alerting baseline + ops status integration
- Update ops-status.yml workflow to use run_ops_status.ps1 wrapper
- Update incident.md runbook with Laravel log permission troubleshooting
- Integrate repo_integrity check into doctor.ps1
- Complete ops_status.ps1 integration with all new checks

--- a/.github/workflows/ops-status.yml
+++ b/.github/workflows/ops-status.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run ops status dashboard
         shell: pwsh
         run: |
-          pwsh ./ops/ops_status.ps1
+          pwsh ./ops/run_ops_status.ps1 -Ci
 
       - name: Upload incident bundle on failure
         if: failure()
