Logging stability v1 (stdout laravel logs) + UI smoke gate (no Monolog permission regressions)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,6 +118,7 @@ services:
       HOS_OIDC_JWKS_URL: http://hos-api:3000/jwks.json
       HOS_OIDC_ISSUER: http://localhost:3000
       HOS_OIDC_WORLD: "pazar"
+      HOS_LARAVEL_LOG_STDOUT: "1"
       SESSION_DRIVER: database
       SESSION_DOMAIN: localhost
     volumes:
