--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 work/hos/secrets/*.txt
 .env
 .env.*
+*.pem
+*.key
+id_rsa*
+secrets/
+**/secrets.*
 oidc_token*.json
 cookies.txt
 headers.txt
@@ -37,6 +42,21 @@ _temp_*.txt
 work/pazar/vendor/
 work/pazar/node_modules/
 **/node_modules/
+**/vendor/
 **/dist/
 _tmp*
 .DS_Store
+
+# IDE / editor files
+.idea/
+.vscode/
+*.swp
+*.tmp
+*.swo
+*~
+
+# Laravel specific
+storage/logs/
+storage/*.log
+bootstrap/cache/*
+!bootstrap/cache/.gitkeep
