docs: Clean up unnecessary MD files and update .gitignore
- Remove 12 unnecessary/duplicate MD files (geçici analiz, duplicate envanter)
- Update README.md (remove references to deleted files)
- Update .gitignore (add node_modules)
- Update docs/ANALYSIS/eski_yeni_sistem_temizlik_ozeti.md

Silinen dosyalar:
- Kök: GITHUB_PAGES_MERGE_ADIMLARI.md, OPS_ENVANTERI.md, OPS_SCRIPT_CORE_VS_KARANTINA.md, PR_DESCRIPTION_GITHUB_PAGES.md, STACK_DOSYA_ENVANTERI.md
- docs/: NE_YAPTIK.md, REPO_INVENTORY.md, REPO_LAYOUT_AZ.md, APPENDIX_ASIS_PAZAR.md, COMMIT_RULES.md, RISK_ANALYSIS_SILINEN_DOSYALAR.md, WP_4_4_DIFF_PLAN.md

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ ops/diffs/
 
 # Temp files
 _temp_*.txt
+
+# Node modules (should never be tracked)
+node_modules/
+work/marketplace-web/node_modules/
