--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -65,7 +65,8 @@ jobs:
       # Copy frontend to marketplace subdirectory
       - name: Copy frontend to marketplace
         run: |
-          mkdir -p _site/marketplace
+          mkdir -p _site/marketplace || true
+          chmod -R u+w _site
           cp -r work/marketplace-web/dist/* _site/marketplace/
 
       # Upload combined artifact
