fix: Remove chmod from GitHub Pages workflow
- chmod causes 'Operation not permitted' errors on Jekyll-generated files
- mkdir and cp are sufficient for copying frontend files
- Fixes workflow failure

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -65,8 +65,7 @@ jobs:
       # Copy frontend to marketplace subdirectory
       - name: Copy frontend to marketplace
         run: |
-          mkdir -p _site/marketplace || true
-          chmod -R u+w _site
+          mkdir -p _site/marketplace
           cp -r work/marketplace-web/dist/* _site/marketplace/
 
       # Upload combined artifact
