WP-38: pazar ping reliability (timeout increase + shared helper + parallel execution)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       PAZAR_STATUS_URL: "http://pazar-app:80"
       MESSAGING_STATUS_URL: "http://messaging-api:3000"
       MESSAGING_PING_URL: "http://messaging-api:3000"
+      WORLD_PING_TIMEOUT_MS: "2000"
       DATABASE_URL_FILE: /run/secrets/database_url
       JWT_SECRET_FILE: /run/secrets/jwt_secret
       GOOGLE_CLIENT_ID_FILE: /run/secrets/google_client_id
