--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,6 +123,7 @@ services:
       HOS_OIDC_JWKS_URL: http://hos-api:3000/jwks.json
       HOS_OIDC_ISSUER: http://localhost:3000
       HOS_OIDC_WORLD: "pazar"
+      HOS_JWT_SECRET: "d432e9cfa332f9c642f0687944974c6deea28fb06e2610946e5890d1bd095d0f"
       HOS_LARAVEL_LOG_STDOUT: "1"
       LOG_CHANNEL: stderr
       LOG_LEVEL: debug
