--- a/work/hos/services/web/nginx.conf
+++ b/work/hos/services/web/nginx.conf
@@ -20,7 +20,13 @@ server {
     proxy_pass http://api:3000;
   }
 
-  # SPA fallback
+  # Marketplace SPA (served under /marketplace/)
+  location /marketplace/ {
+    alias /usr/share/nginx/html/marketplace/;
+    try_files $uri $uri/ /marketplace/index.html;
+  }
+
+  # HOS Web SPA fallback
   location / {
     try_files $uri $uri/ /index.html;
   }
