--- a/work/hos/services/web/nginx.conf
+++ b/work/hos/services/web/nginx.conf
@@ -6,6 +6,20 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
+  # Messaging API proxy (same-origin, no CORS needed)
+  # Example: GET /api/messaging/api/v1/threads/:id -> upstream GET /api/v1/threads/:id
+  location ^~ /api/messaging/ {
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+
+    # strip /api/messaging prefix, forward remainder as-is
+    rewrite ^/api/messaging/(.*)$ /$1 break;
+    proxy_pass http://messaging-api:3000;
+  }
+
   # Browser talks to same-origin nginx; nginx proxies /api/* to the H-OS API service.
   # Example: GET /api/v1/health -> upstream GET /v1/health
   location ^~ /api/ {
