--- a/work/hos/services/web/nginx.conf
+++ b/work/hos/services/web/nginx.conf
@@ -31,7 +31,7 @@ server {
 
     # strip /api prefix
     rewrite ^/api/(.*)$ /$1 break;
-    proxy_pass http://api:3000;
+    proxy_pass http://hos-api:3000;
   }
 
   # Marketplace SPA (served under /marketplace/)
