WP-61: single-origin marketplace API proxy + GENESIS store listing auth alignment

--- a/work/hos/services/web/nginx.conf
+++ b/work/hos/services/web/nginx.conf
@@ -20,6 +20,20 @@ server {
     proxy_pass http://messaging-api:3000;
   }
 
+  # Marketplace API proxy (same-origin, no CORS needed) - WP-61
+  # Example: GET /api/marketplace/api/v1/listings -> upstream GET /api/v1/listings
+  location ^~ /api/marketplace/ {
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+
+    # strip /api/marketplace prefix, forward remainder as-is
+    rewrite ^/api/marketplace/(.*)$ /$1 break;
+    proxy_pass http://pazar-app:80;
+  }
+
   # Browser talks to same-origin nginx; nginx proxies /api/* to the H-OS API service.
   # Example: GET /api/v1/health -> upstream GET /v1/health
   location ^~ /api/ {
